--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -50,7 +50,7 @@
 <div class="content" align="center">
 <h1 class="title">Bem-vindo ao EventeX!</h1>
 <p>O evento mais sensacional do ano depois do Dev in Rio!</p>
-<p>Voce n&atilde;o pode perder esta oportunidade!</p>
+<p>Voc&ecirc; n&atilde;o pode perder esta oportunidade!</p>
 <h4>Abertura das inscri&ccedil;&otilde;es em 18/03/2012.</h4>
 <p>Para d&uacute;vidas e mais informa&ccedil;&otilde;es entre em contato com <a href="mailto:eventex@eventex.com.br">eventex@eventex.com.br</a></p>
 </div>
