put styles in a css file

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,45 +2,7 @@
 <html>
 <head>
 <title>EventeX</title>
-
-<style type="text/css">
-  body { 
-      background-color: white;
-      font-family: Arial, Helvetica, Sans-Serif;
-  }
-  
-  .title { 
-      color: #FF6600 
-  }
-  
-  .content {
-      width: 85%;
-      padding-left: 2em;
-      padding-right: 2em;
-      position:relative;
-      left: 30px;
-      top: 10px;
-      margin-left: 0px;
-      margin-top: 0px;
-      box-shadow: 5px 5px 2px #c0c0c0;
-      border:1px solid;
-      border-radius:10px;
-      -moz-border-radius:10px; /* Firefox 3.6 and earlier */
-      
-      font-size: 1.5em;
-  }
-  
-  .footer {
-      background-color: #F0F0F0;
-      font-size: 8pt;
-      width: 100%;
-      position:relative;
-      margin-left: 0px;
-      margin-top: 0px;
-  }
-  
-</style>
-
+<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" />
 </head>
 <body>
 <div align="center">
