--- a/src/subscriptions/templates/subscriptions/success.html
+++ b/src/subscriptions/templates/subscriptions/success.html
@@ -1,5 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Success!</h1>
-
+<p>Parab&eacute;ns! {{ subscription.name }},</p>
+<p>sua inscricao foi realizada em {{ subscription.created_at|date:"d/m/Y" }}.</p>
+<p>Em breve, entraremos em contato pelo 
+  {% if subscription.phone %}
+    telefone {{ subscription.phone }}
+  {% else %}
+    e-mail {{ subscription.email }}
+  {% endif %}
+</p>
 {% endblock content %}
