--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -10,7 +10,7 @@
 </div>
 
 <!-- Conteudo dinamico -->
-<div id="content" align="center">
+<div id="content">
   {% block content %}
   {% endblock content %}
 </div>
