--- a/src/subscriptions/templates/subscriptions/new.html
+++ b/src/subscriptions/templates/subscriptions/new.html
@@ -1,11 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
+<div id="f_subscription" class="formulario"> 
 <h3>Formul&aacute;rio de inscri&ccedil;&atilde;o</h3>
-
 <form action="." method=POST>
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Enviar">
+  {% csrf_token %}
+  {{ form.as_p }}
+  <input type="submit" value="Enviar">
 </form>
-
+<br>
+</div>
 {% endblock content %}
