--- a/src/subscriptions/templates/subscriptions/success.html
+++ b/src/subscriptions/templates/subscriptions/success.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
+<div id="principal" align="center">
 <p>Parab&eacute;ns! {{ subscription.name }},</p>
-<p>sua inscricao foi realizada em {{ subscription.created_at|date:"d/m/Y" }}.</p>
+<p>sua inscri&ccedil;&atilde;o foi realizada em {{ subscription.created_at|date:"d/m/Y" }}.</p>
 <p>Em breve, entraremos em contato pelo 
   {% if subscription.phone %}
     telefone {{ subscription.phone }}
@@ -9,4 +10,5 @@
     e-mail {{ subscription.email }}
   {% endif %}
 </p>
+</div>
 {% endblock content %}
