--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -1,9 +1,4 @@
-<html>
-<head>
-<title>New</title>
-</head>
-
-<body>
-<p>Hello</p>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<p>Oops! A pagina que voc&ecirc; quer acessar n&atilde;o existe.</p>
+{% endblock content %}
