Sprint 4: Talks page

--- a/src/core/templates/core/speaker_detail.html
+++ b/src/core/templates/core/speaker_detail.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<div id="principal">
 {% if speaker.avatar %}
   <p><img src="{{ speaker.avatar.url }}" alt="{{ speaker.name }}" /></p>
 {% endif %}
 <h4><a href="{{ speaker.url }}">{{ speaker.name }}</a></h4>
 <p>{{ speaker.description }}</p>
+</div>
 {% endblock content %}
