--- a/src/core/templates/core/talks.html
+++ b/src/core/templates/core/talks.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
+  <div id="principal">
   <h3>Manha</h3>
   {% for talk in morning_talks %}
     <div>
-      <h4><a href="{% url core:talk_detail talk.id %}">{{ talk.start_time }} - {{ talk.title }}</a></h4>
-      {% for speaker in talk.speaker.all %}
-        <h5><a href="% url core:speaker_detail speaker.slug %}" 
+      <h4>{{ talk.start_time }} - {{ talk.title }}</h4>
+      {% for speaker in talk.speakers.all %}
+        <h5><a href="{% url core:speaker_detail speaker.slug %}" 
            title="{{ speaker.description|truncatewords:20 }}">{{ speaker.name }}</a></h5>
       {% endfor %}
       <p>{{ talk.description }}</p>
@@ -14,5 +15,20 @@
     {% empty %}
       <p>Nao existem palestras durante a manha.</p>
   {% endfor %}
+  <hr/>
+  <h3>Tarde</h3>
+  {% for talk in afternoon_talks %}
+    <div>
+      <h4>{{ talk.start_time }} - {{ talk.title }}</h4>
+      {% for speaker in talk.speakers.all %}
+        <h5><a href="{% url core:speaker_detail speaker.slug %}" 
+           title="{{ speaker.description|truncatewords:20 }}">{{ speaker.name }}</a></h5>
+      {% endfor %}
+      <p>{{ talk.description }}</p>
+    </div>
+    {% empty %}
+      <p>Nao existem palestras durante a tarde.</p>
+  {% endfor %}
+  </div>
 {% endblock content %}
 
