Spring 4: Template tag (Youtube)

--- a/src/core/templates/core/talks.html
+++ b/src/core/templates/core/talks.html
@@ -4,31 +4,16 @@
   <div id="principal">
   <h3>Manha</h3>
   {% for talk in morning_talks %}
-    <div>
-      <h4>{{ talk.start_time }} - {{ talk.title }}</h4>
-      {% for speaker in talk.speakers.all %}
-        <h5><a href="{% url core:speaker_detail speaker.slug %}" 
-           title="{{ speaker.description|truncatewords:20 }}">{{ speaker.name }}</a></h5>
-      {% endfor %}
-      <p>{{ talk.description }}</p>
-    </div>
-    {% empty %}
+    {% include 'core/talk_snipped.html' %}
+  {% empty %}
       <p>Nao existem palestras durante a manha.</p>
   {% endfor %}
   <hr/>
   <h3>Tarde</h3>
   {% for talk in afternoon_talks %}
-    <div>
-      <h4>{{ talk.start_time }} - {{ talk.title }}</h4>
-      {% for speaker in talk.speakers.all %}
-        <h5><a href="{% url core:speaker_detail speaker.slug %}" 
-           title="{{ speaker.description|truncatewords:20 }}">{{ speaker.name }}</a></h5>
-      {% endfor %}
-      <p>{{ talk.description }}</p>
-    </div>
-    {% empty %}
+    {% include 'core/talk_snipped.html' %}
+  {% empty %}
       <p>Nao existem palestras durante a tarde.</p>
   {% endfor %}
   </div>
 {% endblock content %}
-
