--- a/src/embed/templates/embed/slideshare.html
+++ b/src/embed/templates/embed/slideshare.html
@@ -1,12 +1,11 @@
-<object width="480" height="385">
-  <param name="movie" value="http://www.youtube.com/v/{{ id }}" />
-  <param name="allowFullScreen" value="true" />
-  <param name="allowscriptaccess" value="always" />
-  <embed src="http://www.youtube.com/v/{{ id }}"
-    type="application/x-shockwave-flash"
-    allowscriptaccess="always"
-    allowfullscreen="true"
-    width="480"
-    height="385">
-  </embed>
-</object>
+<div style="width:425px" id="__ss_{{ id }}">
+    <strong style="display:block;margin:12px 0 4px">{{ doc }}</strong> 
+    <iframe src="http://www.slideshare.net/slideshow/embed_code/{{ id }}" 
+        width="480" 
+        height="385" 
+        frameborder="0" 
+        marginwidth="0" 
+        marginheight="0" 
+        scrolling="no">
+    </iframe> 
+</div>
